# easy-plugin

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE.txt  README.md  build.rs  search-index.js
ci/: script.sh
easy-plugin-tests/: Cargo.toml  build.rs
easy-plugin-tests/tests/: convert.rs.in  enums.rs.in  errors.rs.in  specification.rs.in  tests.rs  tests.rs.in
easy_plugin/: enum.Amount.html  enum.Match.html  enum.Specifier.html  fn.parse_arguments.html  fn.parse_specification.html  index.html  macro.spec!.html  sidebar-items.js  struct.Specification.html  type.PluginResult.html
easy_plugin/arguments/: enum.Match.html  fn.parse_arguments.html  sidebar-items.js
easy_plugin/specification/: enum.Amount.html  enum.Specifier.html  fn.parse_specification.html  sidebar-items.js  struct.Specification.html
examples/: enum.rs  struct.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Deref.js
parsers/: Cargo.toml  build.rs  extractor.toml
parsers/src/: arguments.rs  extractor.rs  lib.rs  specification.rs  utility.rs
parsers/tests/: arguments.rs  specification.rs
plugins/: Cargo.toml  lib.rs
plugins/src/: lib.rs  lib.rs.in
src/: arguments.rs  ast.rs.in  convert.rs  convert.rs.in  enums.rs  enums.rs.in  expr.rs  lib.rs  lib.rs.in  specification.rs  specification.rs.in  structs.rs  structs.rs.in  utility.rs
src/easy_plugin/src/: arguments.rs.html  lib.rs.html  specification.rs.html  utility.rs.html
tests/: arguments.rs  convert.rs  enum.rs  enums.rs  errors.rs  lib.rs  specification.rs  struct.rs  structs.rs  tests.rs
