[package]

name = "easy-plugin"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.5.0"

readme = "README.md"
license = "Apache-2.0"

description = "A compiler plugin that makes it easier to write compiler plugins."

documentation = "https://kylemayes.github.io/easy-plugin/easy_plugin"
repository = "https://github.com/KyleMayes/easy-plugin"

[lib]

plugin = true

[dependencies]

easy-plugin-plugins = { version = "0.5.0", path = "plugins" }

[dependencies.clippy]

version = "0.0.67"
optional = true
