[package]

name = "easy-plugin"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.8.0"

readme = "README.md"
license = "Apache-2.0"

description = "A compiler plugin that makes it easier to write compiler plugins."

documentation = "https://kylemayes.github.io/easy-plugin/easy_plugin"
repository = "https://github.com/KyleMayes/easy-plugin"

build = "build.rs"

[lib]

plugin = true

[features]

stable = ["syntex", "syntex_errors", "syntex_syntax", "synthax/stable", "easy-plugin-plugins/stable"]

[dependencies]

easy-plugin-plugins = { version = "0.8.0", path = "plugins" }
syntex = { version = "0.39.0", optional = true }
syntex_errors = { version = "0.39.0", optional = true }
syntex_syntax = { version = "0.39.0", optional = true }
synthax = "0.2.0"

clippy = { version = "0.0.*", optional = true }

[build-dependencies]

easy-plugin-plugins = { version = "0.8.0", path = "plugins" }
syntex = { version = "0.39.0", optional = true }
synthax = "0.2.0"
