[package]

name = "easy-plugin"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.11.1"

readme = "README.md"
license = "Apache-2.0"

description = "A compiler plugin that makes it easier to write compiler plugins."

documentation = "https://kylemayes.github.io/easy-plugin/easy_plugin"
repository = "https://github.com/KyleMayes/easy-plugin"

build = "build.rs"

[lib]

plugin = true

[features]

stable = ["easy-plugin-parsers/stable", "syntex", "syntex_errors", "syntex_syntax", "synthax/stable"]

[dependencies]

easy-plugin-parsers = { version = "0.11.1", path = "parsers" }
synthax = "0.3.2"

syntex = { version = "0.*.0", optional = true }
syntex_errors = { version = "0.*.0", optional = true }
syntex_syntax = { version = "0.*.0", optional = true }

clippy = { version = "0.0.*", optional = true }

[build-dependencies]

synthax = "0.3.2"

syntex = { version = "0.*.0", optional = true }
