[package]

name = "easy-plugin-tests"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.11.1"

build = "build.rs"

[features]

stable = ["syntex", "syntex_syntax", "easy-plugin/stable"]

[dependencies]

easy-plugin = { path = ".." }

syntex = { version = "0.*.0", optional = true }
syntex_syntax = { version = "0.*.0", optional = true }

[build-dependencies]

easy-plugin = { path = ".." }

[[test]]

name = "tests"
