[package]

name = "easy-plugin-parsers"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.10.0"

license = "Apache-2.0"

description = "Parsers used internally by the easy-plugin crate."

documentation = "https://kylemayes.github.io/easy-plugin/easy_plugin"
repository = "https://github.com/KyleMayes/easy-plugin"

build = "build.rs"

[features]

stable = ["syntex", "syntex_errors", "syntex_syntax"]

[dependencies]

syntex = { version = "0.*.0", optional = true }
syntex_errors = { version = "0.*.0", optional = true }
syntex_syntax = { version = "0.*.0", optional = true }

clippy = { version = "0.0.*", optional = true }

[build-dependencies]

toml = "0.2.0"
